import java.time.Duration

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.fourthbrain'
version = '0.1.0'

java {
    // 21, not 17: the code uses List.getFirst() (Java 21). It compiled at 17
    // only because Gradle sets -source/-target without --release.
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // View layer (ADR25). Without it the @Controller view names resolve to nothing.
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // SQLite
    implementation 'org.xerial:sqlite-jdbc:3.44.0.0'
    implementation 'org.hibernate.orm:hibernate-community-dialects'

    // Apache Commons
    implementation 'org.apache.commons:commons-lang3:3.14.0'

    // Logging
    implementation 'org.springframework.boot:spring-boot-starter-logging'

    // Lombok (1.18.40+ required for JDK 25 support)
    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'
    testCompileOnly 'org.projectlombok:lombok:1.18.42'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'

    // Testing. spring-boot-starter-test brings JUnit 5 (Jupiter), Mockito, AssertJ and spring-test.
    // No junit:junit here on purpose (P3.5): there is no vintage engine on the classpath, so a
    // JUnit 4 API would let a JUnit 4 test compile and then never run, reported as zero tests.
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
    // Belt and braces against a hanging test. The whole suite runs in single-digit
    // seconds today (BUILD SUCCESSFUL in 9s, 2026-09-07); these are generous
    // multiples of that, not round numbers, so a real hang still fails fast:
    // any one test method running past 15s is failed rather than left to block
    // the run, and the whole task is killed if the suite as a whole exceeds 3 minutes.
    systemProperty 'junit.jupiter.execution.timeout.default', '15s'
    timeout = Duration.ofMinutes(3)
}

springBoot {
    mainClass = 'com.fourthbrain.FourthBrainApplication'
}
